added more complex examples
