# project/serializers/serializers.py
@@ -1,9 +1,19 @@
+from marshmallow import fields
 from marshmallow_sqlalchemy import ModelSchema
 
-from project.models.models import Color
+from project.models.models import Film, Actor
 
 
-class ColorSchema(ModelSchema):
+class ActorSchema(ModelSchema):
     class Meta:
-        model = Color
-        fields = ('id', 'name', 'timestamp')
+        model = Actor
+        fields = ('id', 'name', 'surname')
+
+
+class FilmSchema(ModelSchema):
+    cast = fields.Nested(ActorSchema, many=True)
+    pubDate = fields.String(required=True, data_key='pub_date', attribute="pub_date")
+
+    class Meta:
+        model = Film
+        fields = ('id', 'name', 'pub_date', 'cast')
